--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url('./components/images/nainoa-shizuru-80385.jpg');
+  background-size: full;
+  background-repeat: no-repeat;
 }
+
+
