--- a/src/components/landingpage.css
+++ b/src/components/landingpage.css
@@ -4,4 +4,16 @@
   font-size: 24px;
   color: white;
   margin-top: 100px;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  background: rgba(171, 230, 238, 0.5);  
+}
+
+h1 {
+  padding-right: 20px;
+  padding-left: 20px;
+  text-shadow: rgb(195, 214, 25) 0 0 10px;  
 }
