--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -23,7 +23,7 @@
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: rgb(79, 81, 104);
   float: right;
   font-size: 28px;
   font-weight: bold;
