Event link message renders when clicked, still undefined

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -22,7 +22,7 @@
 }
 
 /* The Close Button */
-.close {
+.closeModal, .createEvent {
   color: rgb(79, 81, 104);
   float: right;
   font-size: 28px;
