--- a/src/components/begin.css
+++ b/src/components/begin.css
@@ -9,3 +9,11 @@
   width: 50px;
   margin-bottom: 20px;
 }
+
+
+.spinner {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  margin-top: 10px;
+}
