--- a/src/components/userinput.css
+++ b/src/components/userinput.css
@@ -11,6 +11,13 @@
     background: rgba(171, 230, 238, 0.5);  
   }
 
+  .spinner {
+    text-align: center;
+    position: relative;
+    left: 50%;
+    margin-top: 10px;
+  }
+
   .searchButton {
     position: relative;
     display: block;
