--- a/src/components/concertdetails.css
+++ b/src/components/concertdetails.css
@@ -12,7 +12,7 @@ li {
   list-style-type: none;
   padding-top: 10px;
   border-radius: 10px;
-  background: rgba(171, 230, 238, 0.5);
+  /* background: rgba(171, 230, 238, 0.5); */
 }
 
 .results {
