--- a/src/components/concertdetails.css
+++ b/src/components/concertdetails.css
@@ -1,22 +1,24 @@
 .concert-results {
   color: white;
+  margin-top: 50px;
   /* top: 40%;
   left: 50%; */
   /* transform: translate(-50%, -50%); */
 
-  margin: 250px;  
-  margin-top: 650px;
+  /* margin: 250px;  
+  margin-top: 650px; */
 }
 
-li {
+.tkmConcertList {
   list-style-type: none;
-  padding-top: 10px;
-  border-radius: 10px;
+  padding: 50px;
+  /* border-radius: 10px; */
   /* background: rgba(171, 230, 238, 0.5); */
 }
 
-.results {
-  display: block;
-  left: 50%;  
-  text-align: center;
+.concert-results {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid white;
+
 }
