--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('./components/images/nainoa-shizuru-80385.jpg');
+  background-color: black;
+  /* background-image: url('./components/images/nainoa-shizuru-80385.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 
