--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,12 @@
 header {
   margin: 0 auto;
+  border: 2px solid white;
+
 }
 
 
 .nav-list-section {
+  padding: 0;
   display: flex;
   justify-content: center;
 }
