--- a/src/components/about-page.css
+++ b/src/components/about-page.css
@@ -1,10 +1,12 @@
 #about {
   margin: 0 auto;
-  padding-bottom: 50px;
+  margin-top: 25px;
+  padding: 25px;
   text-align: center;
   width: 400px;
   height: 100%;
   color: rgb(201, 192, 192);
   line-height: 1.5;
-  background-color: rgb(49, 47, 47)
+  background-color: rgb(49, 47, 47);
+  border-radius: 20px;
 }
