--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: black;
   /* background-image: url('./components/images/nainoa-shizuru-80385.jpg');
   background-size: cover;
