--- a/src/components/concertdetails.css
+++ b/src/components/concertdetails.css
@@ -1,19 +1,15 @@
 .concert-results {
   color: white;
+  width: 70%;
+  margin: 0 auto;
   margin-top: 50px;
-  /* top: 40%;
-  left: 50%; */
-  /* transform: translate(-50%, -50%); */
-
-  /* margin: 250px;  
-  margin-top: 650px; */
 }
 
 .tkmConcertList {
   list-style-type: none;
-  padding: 50px;
-  /* border-radius: 10px; */
-  /* background: rgba(171, 230, 238, 0.5); */
+  padding: 30px;
+  text-align: center;
+
 }
 
 .concert-results {
@@ -22,4 +18,8 @@
   justify-content: space-between;
   border: 1px solid white;
 
+}
+
+#concert-name {
+  max-width: 120px;
 }
