--- a/src/components/usereventdetails.css
+++ b/src/components/usereventdetails.css
@@ -12,8 +12,13 @@
 }
 
 .my-event {
+  width: 60%;
+  margin: 0 auto;
+  padding-bottom: 5px;
   font-size: 24px;
   color: white;
+  border-bottom: 1px solid lightgrey;
+
 }
 
 #user-event-name, #user-event-creator, #event-attendees {
