Make the application responsive on the modal open view

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -15,16 +15,27 @@
 /* Modal Content/Box */
 .modal-content {
   background-color: #192630;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  margin: 10px auto; /* 10px from the top and centered */
+  padding: 15px;
   border: 1px solid rgb(231, 225, 225);
   width: 80%; /* Could be more or less, depending on screen size */
+  height: 85%;
+}
+
+.modal-content > h1 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#share-link-p {
+  margin: 10px;
 }
 
 /* The Close Button */
 .closeModal, .createEvent {
   margin-right: 10px;
   color: rgb(79, 81, 104);
+  margin-left: 25px;
   display: block;
   margin: 0 auto;
   font-size: 1.3em;
@@ -47,4 +58,40 @@
   font-size: 1.3em;
   border-radius: 5px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 400px) {
+  .modal-content {
+    margin: 30px auto;
+  }
+}
+
+/* //special case for iPhone X landscape that has a wide screen and min height */
+
+@media screen and (min-width: 700px) and (max-height: 375px) {
+  .modal-content {
+    margin: 20px auto; /* 15% from the top and centered */
+  }
+
+  .close-modal, .createEvent {
+    display: block;
+    margin-right: 10px;
+    margin: 0 auto;
+
+  }
+
+}
+
+/* large screens */
+@media screen and (min-width: 700px) {
+  .modal-content {
+    margin: 10px auto; /* 15% from the top and centered */
+  }
+
+  .close-modal, .createEvent {
+    margin-right: 10px;
+    margin: 0 auto;
+
+  }
+
 }
