--- a/src/components/AboutPage.css
+++ b/src/components/AboutPage.css
@@ -3,10 +3,28 @@
   margin-top: 25px;
   padding: 25px;
   text-align: center;
-  width: 400px;
-  height: 100%;
+  width: 250px;
+  height: 70%;
   color: rgb(201, 192, 192);
   line-height: 1.5;
   background-color: rgb(49, 47, 47);
   border-radius: 20px;
+}
+
+@media screen and (min-width: 500px) {
+  #about {
+    width: 500px;
+    height: 100%;
+    margin-top: 10px;
+  }
+
+  h2 {
+    margin: 5px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  #about {
+    margin-top: 50px;
+  }
 }
