--- a/src/components/Concert-Details.css
+++ b/src/components/Concert-Details.css
@@ -9,6 +9,7 @@
   list-style-type: none;
   padding: 30px;
   text-align: center;
+  margin: 0 auto;
 
 }
 
@@ -17,6 +18,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   border: 1px solid white;
+  padding: 0;
 
 }
 
