--- a/src/components/UserLocation.css
+++ b/src/components/UserLocation.css
@@ -7,10 +7,10 @@
 }
 
 
-#search-form {
+.input-form {
     margin: 0 auto;
     font-size: 24px;
-    color: white;
+    /* color: white; */
     border-radius: 10px;
 
   }
