Convert the dates

--- a/src/components/UpdateAttendees.css
+++ b/src/components/UpdateAttendees.css
@@ -5,10 +5,10 @@
   /* transition-timing-function: ease; */
 }
 
-.attendees-container {
+/* .attendees-container {
   width: 100px;
   margin: 0 auto;
-}
+} */
 
 #attendee-label {
   font-size: 24px;
