--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,18 +1,31 @@
 
 #home {
   text-align: center;
-  background-image: url('./images/nainoa-shizuru-80385.jpg');
+  background-image: url('./images/veeterzy-98988-unsplash.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 750px;
+  background-position: center;
+  /* width: 100%; */
+  height: 850px;
 
 }
 
+@media only screen and (min-height: 450px) and (max-height: 850px) {
+  .button-main {
+    margin-top: 0;
+  
+  }
+  #home-title {
+    margin-bottom: 0;
+  }
+}
+
+
 #home-title {
   margin-top: 0;
-  padding-top: 20px;
-  font-size: calc(80px + 2vw);
+  padding-top: 20px;  
+  /* margin-bottom: 0; */
+  font-size: calc(80px + 1.5vw);
   color: white;
 }
 
