--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  /* width: 100%; */
   height: 850px;
 
 }
@@ -24,7 +23,7 @@
 #home-title {
   margin-top: 0;
   padding-top: 20px;  
-  /* margin-bottom: 0; */
+  margin-bottom: 0;
   font-size: calc(80px + 1.5vw);
   color: white;
 }
